[package]
name = "arinamcnulty-markdown-parser"
version = "0.1.1"
edition = "2024"
description = "Markdown parser - university project."
license = "MIT"
repository = "https://github.com/arinamcnulty/markdown-parser"
documentation = "https://docs.rs/arinamcnulty-markdown-parser"
homepage = "https://github.com/arinamcnulty/markdown-parser"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
html-escape = "0.2.13"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
